--- a/trabPort/curriculo.html
+++ b/trabPort/curriculo.html
@@ -11,9 +11,9 @@
 <body>
 	<div class="jumbotron text-center">
 		<h1>Jack Biller da Silva Prado</h1>
-		<p><b>Objetivo: </b> Desempenhar papel como programador, buscando novos desafios!</p> 
+		<p><b>Objetivo: </b> Desempenhar papel como programador, buscando novos desafios e agregando mais conhecimento!</p>
 	</div>
-
+	<!-- <hr> -->
 	<div class="row">
 		<div class="col-sm-4 text-center">
 			<img src="foto.jpg" width="70%">
@@ -69,7 +69,7 @@
 			</table>			
 		</div>
 	</div>
-
+	<!-- <hr> -->
 	<div class="row">
 		<div class="col-sm-12 text-center">
 			<h3>Experiencia Proficional</h3>
